Fix minor layout issues after NPM updates.
[#159280307]
https://www.pivotaltracker.com/story/show/159280307

--- a/css/dashboard/dashboard.less
+++ b/css/dashboard/dashboard.less
@@ -58,7 +58,7 @@
   }
 
   .verticalScrollContainer {
-    width: calc(~"100% -" 2 * @content-padding);
+    width: 100%;
     display: inline-block;
     vertical-align: top;
     overflow-y: auto;
